# controller/employee_controller.js
@@ -69,7 +69,7 @@ async function Register(req, res) {
     user.save();
     return res.status(200).send({ Message: "user Register successfully" });
   } catch (e) {
-    console.log(e);
+    //console.log(e);
     return res.status(500).send({ Message: `something went wrong, ${e}` });
   }
 }
@@ -136,7 +136,7 @@ async function login(req, res) {
     return res.status(500).send({ Message: `something went wrong, ${e}` });
   }
 }
-/**
+
 //updatEmployeeProfile Api
 async function employee_update(req, res) {
   try {
@@ -326,13 +326,13 @@ async function EmpBday(req, res) {
   } catch (e) {
     return res.status(500).send({ Message: `something went wrong, ${e}` });
   }
-} */
+} 
 
 module.exports = {
   Register,
   login,
-  // employee_update,
-  // reset_password,
-  // EmployeeDetails,
-  // EmpBday,
+  employee_update,
+  reset_password,
+  EmployeeDetails,
+  EmpBday,
 };
