# routes/employee_routes.js
@@ -7,10 +7,10 @@ const auth = require('../middleware/auth_middleware')
 
 router.post('/Register',controller.Register)
 router.post('/login',controller.login)
-// router.put('/employee_update',auth,controller.employee_update)
-// router.put('/reset_password',auth,controller.reset_password)
-// router.get('/EmployeeDetails',auth,controller.EmployeeDetails)
-// router.get('/EmpBday',auth,controller.EmpBday)
+router.put('/employee_update',auth,controller.employee_update)
+router.put('/reset_password',auth,controller.reset_password)
+router.get('/EmployeeDetails',auth,controller.EmployeeDetails)
+router.get('/EmpBday',auth,controller.EmpBday)
 
 
 
