# swagger.json
@@ -1,98 +1,467 @@
 {
-    "openapi": "3.0.1",
-  
-    "info": {
-      "version": "1.3.0",
-  
-      "title": "Users",
-  
-      "description": "Employee management API"
-    },
-  
-    "servers": [
-      {
-        "url": "http://localhost:3000",
-  
-        "description": "Local server"
+  "openapi": "3.0.1",
+  "info": {
+    "version": "1.3.0",
+    "title": "Users",
+    "description": "Employee management API"
+  },
+  "components": {
+    "securitySchemes": {
+      "ApiKeyAuth": {
+        "type": "apiKey",
+        "in": "header",
+        "name": "authenticate"
       }
-    ],
-  
-    "tags": [
-      {
-        "name": "CRUD operations"
-      }
-    ],
-    "paths": {
-      "/auth/signup": {
-        "post": {
-          "tags": ["CRUD operations"],
-  
-          "description": "Get users",
-  
-          "operationId": "getUsers",
-  
-          "parameters": [],
-  
-          "requestBody": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/signup"
-                }
+    }
+  },
+  "security": [
+    {
+      "ApiKeyAuth": []
+    }
+  ],
+  "servers": [
+    {
+      "url": "http://localhost:3000",
+      "description": "Local server"
+    }
+  ],
+
+  "tags": [
+    {
+      "name": "CRUD operations"
+    }
+  ],
+
+  "paths": {
+    "/auth/signup": {
+      "post": {
+        "tags": ["UserSwagger"],
+        "description": "Get users",
+        "operationId": "getUsers",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/refrence/schemas/signup"
               }
             }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Todo created successfully"
           },
-  
-          "responses": {
-            "201": {
-              "description": "Todo created successfully"
-            },
-  
-            "500": {
-              "description": "Server error"
-            }
+          "500": {
+            "description": "Server error"
           }
         }
       }
     },
-    "components": {
-      "schemas": {
-        "signup": {
-          "type": "object",
-  
-          "properties": {
-              "name": {
-                  "type": "string",
-      
-                  "description": "An name of a todo",
-      
-                  "example": "abc"
-                },
-            "email": {
-              "type": "string",
-  
-              "description": "An id of a todo",
-  
-              "example": "abc@gmail.com"
-            },
-  
-            "password": {
-              "type": "string",
-  
-              "description": "An id of a todo",
-  
-              "example": "abc@gmail.com"
-            },
-            "mobile": {
-                "type": "string",
-    
-                "description": "An id of a todo",
-    
-                "example": "abc@gmail.com"
+    "/auth/login": {
+      "post": {
+        "tags": ["UserSwagger"],
+        "description": "Get users",
+        "operationId": "getUsers",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/refrence/schemas/login"
               }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Todo created successfully"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/auth/delete_api": {
+      "delete": {
+        "tags": ["UserSwagger"],
+        "description": "Get users",
+        "operationId": "getUsers",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/refrence/schemas/delete_api"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Todo created successfully"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/auth/update_api": {
+      "put": {
+        "tags": ["UserSwagger"],
+        "description": "Get users",
+        "operationId": "getUsers",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/refrence/schemas/update_api"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Todo created successfully"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/auth/delete_ap": {
+      "delete": {
+        "tags": ["UserSwagger"],
+        "description": "Get users",
+        "operationId": "getUsers",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/refrence/schemas/delete_ap"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Todo created successfully"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/emp/Register": {
+      "post": {
+        "tags": ["EmployeeSwagger"],
+        "description": "Get users",
+        "operationId": "getUsers",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/refrence/schemas/Register"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Todo created successfully"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/emp/login": {
+      "post": {
+        "tags": ["EmployeeSwagger"],
+        "description": "Get users",
+        "operationId": "getUsers",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/refrence/schemas/login"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Todo created successfully"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/emp/employee_update": {
+      "put": {
+        "tags": ["EmployeeSwagger"],
+        "description": "Get users",
+        "operationId": "getUsers",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/refrence/schemas/employee_update"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Todo created successfully"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/emp/reset_password": {
+      "put": {
+        "tags": ["EmployeeSwagger"],
+        "description": "Get users",
+        "operationId": "getUsers",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/refrence/schemas/reset_password"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Todo created successfully"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/emp/EmployeeDetails": {
+      "get": {
+        "tags": ["EmployeeSwagger"],
+        "description": "Get users",
+        "operationId": "getUsers",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/refrence/schemas/EmployeeDetails"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Todo created successfully"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/emp/EmpBday": {
+      "get": {
+        "tags": ["EmployeeSwagger"],
+        "description": "Get users",
+        "operationId": "getUsers",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/refrence/schemas/EmpBday"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Todo created successfully"
+          },
+          "500": {
+            "description": "Server error"
           }
         }
       }
     }
+  },
+
+  "refrence": {
+    "schemas": {
+      "signup": {
+        "type": "object",
+        "properties": {
+          "name": {},
+          "email": {},
+          "password": {},
+          "mobile": {}
+        }
+      },
+      "login": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "password": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          }
+        }
+      },
+      "delete_api": {
+        "type": "object",
+        "properties": {}
+      },
+      "update_api": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "mobile": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          }
+        }
+      },
+      "delete_ap": {
+        "type": "object",
+        "properties": {}
+      },
+      "Register": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "email": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "password": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "phoneno": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "salary": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "gender": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "birthday": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "city": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          }
+        }
+      },
+      "Alogin": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "password": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          }
+        }
+      },
+      "employee_update": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "phoneno": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          }
+        }
+      },
+      "reset_password": {
+        "type": "object",
+        "properties": {
+          "oldpwd": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "newpwd": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          },
+          "confirmpwd": {
+            "type": "string",
+            "description": "An id of a todo",
+            "example": "abc@gmail.com"
+          }
+        }
+      },
+      "EmployeeDetails": {
+        "type": "object",
+        "properties": {}
+      },
+      "EmpBday": {
+        "type": "object",
+        "properties": {}
+      }
+    }
   }
-  
+}
